try build